--- a/Spam_SMS_Redux.ipynb
+++ b/Spam_SMS_Redux.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMc2p30ZFaSLlSrnjj27eWD",
+      "authorship_tag": "ABX9TyN7OG+E16UXjKpSDaGNAjaW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4374,6 +4374,44 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json, os\n",
+        "\n",
+        "def clean_notebook(ipynb_path, output_path=None):\n",
+        "    \"\"\"\n",
+        "    Removes problematic metadata (like widgets.state) from a .ipynb file\n",
+        "    so it renders correctly on GitHub.\n",
+        "    \"\"\"\n",
+        "    if output_path is None:\n",
+        "        output_path = ipynb_path  # overwrite in place\n",
+        "\n",
+        "    with open(ipynb_path, \"r\", encoding=\"utf-8\") as f:\n",
+        "        nb = json.load(f)\n",
+        "\n",
+        "    # Safely drop widget metadata if exists\n",
+        "    if \"widgets\" in nb.get(\"metadata\", {}):\n",
+        "        nb[\"metadata\"].pop(\"widgets\", None)\n",
+        "        print(\"✅ Removed 'widgets' metadata\")\n",
+        "\n",
+        "    # Clean per-cell metadata (optional, removes execution junk)\n",
+        "    for cell in nb.get(\"cells\", []):\n",
+        "        if \"metadata\" in cell:\n",
+        "            cell[\"metadata\"].pop(\"id\", None)         # Colab cell IDs\n",
+        "            cell[\"metadata\"].pop(\"execution\", None)  # Colab execution data\n",
+        "\n",
+        "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
+        "        json.dump(nb, f, indent=2, ensure_ascii=False)\n",
+        "\n",
+        "    print(f\"✨ Cleaned notebook saved to {output_path}\")\n"
+      ],
+      "metadata": {
+        "id": "ApQXJ0LPgtTH"
+      },
+      "execution_count": 23,
+      "outputs": []
     }
   ]
 }
